# my_skills

./: .gitmodules
bin_test/: SKILL.md
bin_test/config/: bin_res_lbhb.txt  bin_res_sigled.txt
bin_test/references/: bin_config.md
bin_test/result/: lb_all_levels_20260204_185135.csv
bin_test/scripts/: lb_all_levels_test.py  run_bin_test.py
device-control/: CLAUDE.md  SKILL.md
device-control/scripts/: bind_usb.py  update_claude_md.py
gd32-cmake-generator/: SKILL.md
gd32-cmake-generator/scripts/: generate_project.py
gd32-cmake-generator/template/: CMakeLists.txt  arm-none-eabi-gcc.cmake
gd32-cmake-generator/template/Core/F4/: gd32f4xx_it.c  gd32f4xx_libopt.h  main.c  systick.c
oscilloscope/: SKILL.md
power-supply/: SKILL.md
programmable-resistor/: SKILL.md
skill-manager/: SKILL.md
skill-manager/references/: examples.md
skill-manager/scripts/: install_skill.sh
